--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1786,14 +1786,14 @@ Google map
 }
 
 .works-grid.works-grid-gut .work-item {
-  padding: 0 0 10px 10px;
+  padding: 0 0 0px 10px;
 }
 
 .work-item {
   width: 50%;
   float: left;
-  margin: 0;
-  box-shadow: 5px 5px 2px #888888
+  margin-bottom: 1%;
+  box-shadow: 5px 5px 2px #888888;
 }
 
 .works-grid-3 .work-item {
@@ -1868,9 +1868,9 @@ Google map
 }
 
 .work-item:hover .work-image > img {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2) ;
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2) rotate(2deg);
+  -ms-transform: scale(1.2) rotate(2deg) ;
+  transform: scale(1.2) rotate(2deg);
 }
 
 .work-item:hover .work-caption {
