--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1786,7 +1786,7 @@ Google map
 }
 
 .works-grid.works-grid-gut .work-item {
-  padding: 0 0 0px 10px;
+  padding: 0 0 0 10px;
 }
 
 .work-item {
@@ -2848,12 +2848,16 @@ Google map
   .works-grid-3 .work-item,
   .works-grid-4 .work-item,
   .works-grid-5 .work-item {
-    display: none;
+    width: 100%;
   }
 
   .press-logo{
     display:block;
     height: 20px;
     width: 20px;
+  }
+
+  #press-grid{
+    display: none;
   }
 }
