--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,14 @@ a,
   background-size: cover;
 }
 
+
+ 
+  /*
+  Label the data
+  */
+  #no-more-tables td:before { content: attr(data-title); }
+}
+
 /* Vertical margin, padding */
 .p-0 {
   padding: 0 !important;
@@ -2843,13 +2851,10 @@ Google map
     width: 100%;
   }
 
-  .press-logo{
-    display:block;
-    height: 20px;
-    width: 20px;
-  }
+  
 
   #press-grid{
     display: none;
   }
 }
+
