--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,10 +686,6 @@ a,
   border-radius: 30px;
 }
 
-.btn.btn-y {
-  background: #FFC857 ;
-  color: #111;
-}
 .btn.btn-w {
   background: rgba(255, 255, 255, 0.8);
   color: #111;
@@ -698,6 +694,17 @@ a,
 .btn.btn-w:hover,
 .btn.btn-w:focus {
   background: white;
+  color: #111;
+}
+
+.btn.btn-y {
+  background: #FFC857;
+  color: #fff;
+}
+
+.btn.btn-y:hover,
+.btn.btn-y:focus {
+  background: #FC4A1A ;
   color: #111;
 }
 
@@ -718,15 +725,9 @@ a,
   color: #fff;
 }
 
-.btn.btn-border-y {
-  background: #FFC857;
-  border: #FFC857;
-  color: #ffffff;
-}
-
 .btn.btn-border-w:hover,
 .btn.btn-border-w:focus {
-  background:#FFC857;
+  background: #fff;
   border-color: transparent;
   color: #111;
 }
@@ -1093,9 +1094,25 @@ General Styles - FlexSlider
   position: relative;
   display: table;
   height: 100%;
-  width: 50%;
-  margin: 30% auto;
+  width: 100%;
+  margin: 40% auto;
 
+}
+
+.titan-caption {
+  position: relative;
+  display: table;
+  height: 100%;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.titan-caption {
+  position: relative;
+  display: table;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 
@@ -1103,6 +1120,7 @@ General Styles - FlexSlider
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+  color: #ffffff;
 }
 
 /*
@@ -1208,14 +1226,14 @@ General Styles - Owlcarousel
 	Navbar
 --------------------------------------------------------------*/
 .navbar-custom {
-  background-color:  #37b1cf;
+  background-color:  rgba(0, 0, 0, 0.4);;
   border: 0;
   border-radius: 0;
   z-index: 1000;
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
-  font-size: 11px;
+  font-size: 15px;
   transition: background, padding 0.4s ease-in-out 0s;
 }
 
@@ -1234,13 +1252,13 @@ General Styles - Owlcarousel
 .navbar-custom .navbar-brand {
   letter-spacing: 4px;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 33px;
   color: #fff;
 }
 
 .navbar-custom .nav li > a {
   position: relative;
-  color: rgba(255, 255, 255, 0.7);
+  color: #FFC857;
   font-weight: 800;
 }
 
@@ -1248,7 +1266,7 @@ General Styles - Owlcarousel
   border-bottom: 1px solid rgba(73, 71, 71, 0.15) !important;
   padding: 11px 15px;
   letter-spacing: 2px;
-  color: #999;
+  color: #FFC857 ;
 }
 
 .navbar-custom .dropdown-menu .dropdown-menu {
@@ -1274,7 +1292,7 @@ General Styles - Owlcarousel
 .navbar-custom .dropdown-menu > li > a:focus,
 .navbar-custom .dropdown-menu > li > a:hover {
   background: none;
-  color: #fff;
+  color: #ffffff !important;
 }
 
 .navbar-custom .dropdown-menu > li > a:hover {
@@ -1318,6 +1336,28 @@ General Styles - Owlcarousel
   background-size: cover;
 }
 
+.titan-title-size-1 {
+  letter-spacing: 4px;
+  font-size: 15px;
+}
+
+.titan-title-size-2 {
+  line-height: 1.3;
+  letter-spacing: 3px;
+  font-size: 18px;
+  opacity: 0.8;
+}
+
+.titan-title-size-3 {
+  letter-spacing: 16px;
+  font-size: 46px;
+}
+
+.titan-title-size-4 {
+  letter-spacing: 24px;
+  font-weight: 400;
+  font-size: 48px;
+}
 .ycenter-title-size-1 {
   letter-spacing: 4px;
   font-size: 15px;
@@ -1327,7 +1367,7 @@ General Styles - Owlcarousel
   line-height: 1.3;
   letter-spacing: 3px;
   font-size: 18px;
-  opacity: .8;
+  font-weight: 800;
 }
 
 .ycenter-title-size-3 {
