--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,8 +665,9 @@ a,
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
-  font-size: 11px;
+  font-size: 16px;
   padding: 8px 37px;
+  font-weight: 600;
 }
 
 .btn.active.focus,
@@ -704,8 +705,9 @@ a,
 
 .btn.btn-y:hover,
 .btn.btn-y:focus {
-  background: #FC4A1A ;
+  background: white;
   color: #111;
+  
 }
 
 .btn.btn-g {
@@ -912,6 +914,10 @@ blockquote {
   padding: 0;
 }
 
+.font-droid{
+    font-family: 'Droid Sans', sans-serif;
+    letter-spacing: 2px;
+}
 .font-alt {
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
@@ -1094,8 +1100,9 @@ General Styles - FlexSlider
   position: relative;
   display: table;
   height: 100%;
-  width: 100%;
-  margin: 40% auto;
+  width: 45%;
+  margin: 0 0 0 2%;
+  padding-top: 5%;
 
 }
 
@@ -1342,10 +1349,11 @@ General Styles - Owlcarousel
 }
 
 .titan-title-size-2 {
-  line-height: 1.3;
+  line-height: 2;
   letter-spacing: 3px;
   font-size: 18px;
   opacity: 0.8;
+
 }
 
 .titan-title-size-3 {
@@ -1364,15 +1372,16 @@ General Styles - Owlcarousel
 }
 
 .ycenter-title-size-2 {
-  line-height: 1.3;
-  letter-spacing: 3px;
-  font-size: 18px;
-  font-weight: 800;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  font-size: 28px;
+  
 }
 
 .ycenter-title-size-3 {
   letter-spacing: 16px;
   font-size: 46px;
+  font-weight: 600;
 }
 
 .ycenter-title-size-4 {
