--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1054,13 +1054,11 @@ General Styles - FlexSlider
 .flex-direction-nav .flex-prev {
   opacity: 0;
   left: 0;
-  cursor: url(../images/prev-light.png), e-resize;
 }
 
 .flex-direction-nav .flex-next {
   opacity: 0;
   right: 0;
-  cursor: url(../images/next-light.png), e-resize;
 }
 
 .flex-control-nav {
@@ -1094,6 +1092,47 @@ General Styles - FlexSlider
   background: #fff;
 }
 
+/* -------------------------------------------------------------------
+Hero Slider
+------------------------------------------------------------------- */
+.hero-slider {
+  margin: 0 !important;
+}
+
+.hero-slider .slides > li {
+  display: none;
+  -webkit-backface-visibility: hidden;
+}
+
+.hero-slider,
+.hero-slider .flex-viewport {
+  height: 100% !important;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.hero-slider .slides {
+  height: 100% !important;
+  transition-delay: 1s;
+}
+
+.hero-slider .flex-direction-nav a {
+  width: 15%;
+}
+
+.hero-slider .slides li {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100% !important;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
 
 /* Caption */
 .ycenter-caption {
