event folder and event page working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -838,6 +838,7 @@ a,
 }
 
 /* Forms common style */
+
 .form-control {
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
@@ -3403,4 +3404,26 @@ Google map
     display: none;
   }
 }
+
+
+/*-------------------------------------------
+  event inputs
+  ------------------------------------------*/
+  .filter-event{
+    margin-bottom: 20px;
+  }
+  .filter-container input {
+    -webkit-appearance: none;
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 11px;
+  height: 33px;
+  border: 1px solid #EAEAEA;
+  border-radius: 2px;
+  transition: all 0.4s ease-in-out 0s;
+
+     }
+    .filter-container input:focus {
+       border-color: #CACACA; }
 
