commiting to push, everything working, impact map added, last working version in produsct design folder

--- a/ProjectY/css/salvattore.css
+++ b/ProjectY/css/salvattore.css
@@ -2,10 +2,7 @@
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), 
-  url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), 
-  url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), 
-  url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -5191,7 +5188,7 @@ tbody.collapse.in {
   display: inline-block;
 }
 .breadcrumb > li + li:before {
-  content: "/ ";
+  content: "/ ";
   padding: 0 5px;
   color: #ccc;
 }
@@ -7644,6 +7641,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 @media screen and (max-width: 768px) {
+
+
   #fh5co-hero .fh5co-intro h2 {
     font-size: 40px;
     line-height: 40px;
@@ -8123,27 +8122,36 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
   line-height: 60px;
 }
+/*custom classes for slider text */
+
+.fh5co-section-heading .fh5co-lead-light {
+  font-size: 45px;
+  line-height: 40px;
+  color:white;
+  margin-top: 20%;
+}
 
 .fh5co-section-heading .fh5co-sub-lead-light {
   font-size: 35px;
   line-height: 50px;
   color:white;
-  margin-top: 25%;
+  margin-top: 5%;
   font-weight: 550;
-  
+  lin
 }
+/*end------------------ */
+
 @media screen and (max-width: 768px) {
   .fh5co-section-heading .fh5co-lead {
     font-size: 35px;
     line-height: 50px;
   }
-
-  /*custom classes for slider text */
+/*custom classes for slider text */
   .fh5co-section-heading .fh5co-lead-light {
     font-size: 35px;
     line-height: 50px;
     color:white;
-    margin-top: 45%;
+    margin-top: 50%;
   }
 
   .fh5co-section-heading .fh5co-sub-lead-light {
@@ -8152,6 +8160,7 @@ h1, h2, h3, h4, h5, h6 {
     color:white;
   }
 
+  /*---end ------------------*/
 }
 .fh5co-section-heading .emp {
   font-family: "Playfair Display", times, serif;
@@ -8274,6 +8283,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1.5;
 }
+
+
 .fh5co-bg-section .fh5co-hero-wrap .fh5co-hero-intro .fh5co-lead {
   margin-bottom: 30px;
 }
@@ -8745,8 +8756,8 @@ pre {
   float: right;
   position: relative;
   top: 12px;
-  right: 15px;
-  margin-right: -50px;
+  right: 0px;
+  margin-right: -20px;
   z-index: 21;
   padding: 6px 0 0 0;
   display: block;
@@ -8780,7 +8791,6 @@ pre {
 .owl-carousel-posts .owl-controls {
   margin-top: 0;
 }
-
 
 @media screen and (max-width: 768px) {
   .owl-carousel .owl-controls .owl-nav {
@@ -8985,6 +8995,7 @@ a > img.fh5co-align-center {
 
 /*# sourceMappingURL=style.css.map */
 
+
 /* my owl-------------------------------*/
 @media screen and (max-width: 768px) {
   .owl-carousel .owl-controls .owl-nav {
@@ -9188,412 +9199,3 @@ a > img.fh5co-align-center {
         padding: 0;
         line-height: 1.5;
     }
-
-.pfblock {
-    padding: 120px 0 100px;
-}
-
-.pfblock-gray {
-    background: #f5f5f5;
-}
-
-.pfblock-image {
-    padding: 0;
-}
-
-.calltoaction h1,
-.calltoaction h2,
-.calltoaction h3,
-.calltoaction h4,
-.calltoaction h5,
-.calltoaction h6,
-.pfblock-image,
-.pfblock-image h1,
-.pfblock-image h2,
-.pfblock-image h3,
-.pfblock-image h4,
-.pfblock-image h5,
-.pfblock-image h6 {
-    color: #fff;
-}
-
-.pfblock-header {
-    text-align: center;
-    margin: 0 0 60px;
-}
-
-.pfblock-header-left {
-    text-align: left;
-}
-
-.pfblock-header-left .pfblock-line {
-    width: inherit;
-    margin: 30px 0;
-}
-
-.pfblock-title{
-    font-weight: 800;
-}
-
-.pfblock-subtitle {
-    font-family: Raleway, "Times New Roman", Times, sans-serif;
-    font-style: normal;
-    font-size: 18px;
-}
-
-.pfblock-line {
-    background: rgba(135, 135, 135, 0.5);
-    width: 100px;
-    height: 1px;
-    margin: 30px auto;
-}
-
-.pfblock-icon {
-    font-size: 32px;
-}
-.calltoaction *{
-    text-align: center;
-}
-.calltoaction {
-    background: url(../images/item-3.jpg);
-    background-color: #222;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    -webkit-background-size: cover;
-       -moz-background-size: cover;
-         -o-background-size: cover;
-            background-size: cover;
-    padding: 50px 0;
-    color: #999;
-}
-
-.calltoaction h2 {
-    font-size: 20px;
-    letter-spacing: 1px;
-    margin-bottom: 5px;
-}
-
-.calltoaction-decription{
-    padding-top: 20px;
-    padding-bottom: 30px;
-    font-size: 20px;
-    color: #fff;
-}
-
-.calltoaction-btn {
-    text-align: center;
-}
-
-.calltoaction-btn > .btn {
-    background: rgba(255, 255, 255, .8);
-    color: #111;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.calltoaction-btn > .btn:hover{
-    background: #fff;
-}
-
-.long-down {
-    margin-bottom: 40px;
-}
-
-/*--------------------------------*/
-/***** Impact grid style *****/
-/*--------------------------------*/
-
-.grid {
-    position: relative;
-    clear: both;
-    margin: 0 auto;
-    padding: 1em 0 4em;
-    max-width: 100%;
-    list-style: none;
-    text-align: center;
-}
-
-.grid h2{
-    font-size: 20px;
-}
-
-.grid figure {
-    position: relative;
-    float: left;
-    overflow: hidden;
-    margin: 10px 1%;
-    min-width: 100%;
-    max-width: 100%;
-    height: auto;
-    background: #3085a3;
-    text-align: center;
-    cursor: pointer;
-}
-
-.grid figure img {
-    position: relative;
-    display: block;
-    min-height: auto;
-    max-width: 100%;
-    opacity: 0.8;
-}
-
-.grid figure figcaption {
-    padding: 2em;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.grid figure figcaption::before,
-.grid figure figcaption::after {
-    pointer-events: none;
-}
-
-.grid figure figcaption,
-.grid figure figcaption > a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
-.grid figure figcaption > a {
-    z-index: 1000;
-    text-indent: 200%;
-    white-space: nowrap;
-    font-size: 0;
-    opacity: 0;
-}
-
-.grid figure h2 {
-    word-spacing: -0.15em;
-    font-weight: 300;
-}
-
-.grid figure h2 span {
-    font-weight: 800;
-}
-
-.grid figure h2,
-.grid figure p {
-    margin: 0;
-}
-
-.grid figure p {
-    letter-spacing: 1px;
-    font-size: 68.5%;
-}
-
-/*---------------*/
-/***** Bubba *****/
-/*---------------*/
-
-figure.effect-bubba {
-    background: #9e5406;
-}
-
-figure.effect-bubba img {
-    opacity: 0.7;
-    -webkit-transition: opacity 0.35s;
-    transition: opacity 0.35s;
-}
-
-figure.effect-bubba:hover img {
-    opacity: 0.4;
-}
-
-figure.effect-bubba figcaption::before,
-figure.effect-bubba figcaption::after {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    bottom: 30px;
-    left: 30px;
-    content: '';
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-}
-
-figure.effect-bubba figcaption::before {
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    -webkit-transform: scale(0,1);
-    transform: scale(0,1);
-}
-
-figure.effect-bubba figcaption::after {
-    border-right: 1px solid #fff;
-    border-left: 1px solid #fff;
-    -webkit-transform: scale(1,0);
-    transform: scale(1,0);
-}
-
-figure.effect-bubba h2 {
-    padding-top: 10%;
-    -webkit-transition: -webkit-transform 0.35s;
-    transition: transform 0.35s;
-    -webkit-transform: translate3d(0,-20px,0);
-    transform: translate3d(0,-20px,0);
-    color: #fff;
-}
-
-figure.effect-bubba p {
-    padding: 15px 1.5em;
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(0,20px,0);
-    transform: translate3d(0,20px,0);
-}
-
-figure.effect-bubba:hover figcaption::before,
-figure.effect-bubba:hover figcaption::after {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-}
-
-figure.effect-bubba:hover h2,
-figure.effect-bubba:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
-}
-
-
-
-.fh5co-nav-no-toggle {
-  float: right;
-  position: relative;
-  top: 25px;
-  right: 160px;
-  margin-right: -20px;
-  z-index: 21;
-  padding: 0 0 0 0;
-  display: block;
-  height: 23px;
-  width:47px;
-  text-transform: uppercase;
- background-color: #ffffff;
-  border-bottom: none !important;
-  color: #242943;
- text-align: center;
- font-family: "Montserrat", arial, sans-serif;
-  letter-spacing: 2px;
-  font-size: 14px;
-  font-weight: 600;
-  
-}
- .fh5co-nav-no-toggle:hover{
-  color:  #37b2cf;
- }
-
-
-@media screen and (max-device-width: 480px) { 
-.grid figure p {
-    letter-spacing: 1px;
-    font-size: 55.5%;
-    line-height: 20px;
-  }
-
-  figure.effect-bubba p {
-    padding: 8px;
-    opacity: 0;
-  }
-.fh5co-nav-no-toggle {
-   right: 130px;
-}
-
-
-}
-
-
-/*--------------------
-4.6. Team
---------------------*/
-
-.team-item {
-    text-align: center;
-    background-color: #fafaf4;
-    margin-bottom: 30px;
-}
-
-.team-item h3 {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 13px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 12px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-position {
-    color: #000;
-    font-size: 12px;
-}
-
-.team-item p {
-    font-size: 13px;
-    font-weight: 300;
-    color: #9C9C9C;
-    padding: 5px 10px 20px 10px;
-}
-/*-----------------------------------------------
-  Press Grid Style
-  ---------------------------------------------*/
-
-  
-  .our-clients-section{
-    margin-bottom:2.143em;   
-    padding:2.143em 0;
-    overflow: hidden;
-    background: #ffffff;
-    box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-    -webkit-box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-    -moz-box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-  }
-  #our-client-thumb{
-    position: relative;
-    padding: 0 30px;
-    text-align: center;
-  }
-.customNavigation a{
-    position: absolute;
-    top: 33%;
-    font-size: 1.25rem;  
-    color: #ffffff;
-    cursor: pointer;
-    width: 1.667em;
-    text-align: center;
-    background: #55595d;
-    padding: 3px 12px;      
-}
-.customNavigation .prev {
-    float: left;
-    left: 0;
-}
-.customNavigation .next {
-    float: right;
-    right: 0;
-}
-.customNavigation a:hover{
-  background: #F9C535; 
-}
-.customNavigation i{
-  color:#ffffff;
-  vertical-align: baseline;
-}
