--- a/ProjectY/css/style.css
+++ b/ProjectY/css/style.css
@@ -2,10 +2,7 @@
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), 
-  url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), 
-  url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), 
-  url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -7645,9 +7642,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media screen and (max-width: 768px) {
   #fh5co-hero .fh5co-intro h2 {
-    font-size: 40px;
-    line-height: 40px;
+    font-size: 20px;
+    line-height: 30px;
   }
+}
+@media screen and (min-width: 768px){
+  .rwd-break { display: none; }
+}
+@media screen and (max-width: 768px){
+  .inverse-rwd-break { display: none; }
 }
 #fh5co-hero .fh5co-intro p {
   font-size: 18px;
@@ -8123,35 +8126,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
   line-height: 60px;
 }
-
-.fh5co-section-heading .fh5co-sub-lead-light {
-  font-size: 35px;
-  line-height: 50px;
-  color:white;
-  margin-top: 25%;
-  font-weight: 550;
-  
-}
 @media screen and (max-width: 768px) {
   .fh5co-section-heading .fh5co-lead {
     font-size: 35px;
     line-height: 50px;
   }
-
-  /*custom classes for slider text */
-  .fh5co-section-heading .fh5co-lead-light {
-    font-size: 35px;
-    line-height: 50px;
-    color:white;
-    margin-top: 45%;
-  }
-
-  .fh5co-section-heading .fh5co-sub-lead-light {
-    font-size: 25px;
-    line-height: 30px;
-    color:white;
-  }
-
 }
 .fh5co-section-heading .emp {
   font-family: "Playfair Display", times, serif;
@@ -8745,7 +8724,7 @@ pre {
   float: right;
   position: relative;
   top: 12px;
-  right: 15px;
+  right: 0px;
   margin-right: -50px;
   z-index: 21;
   padding: 6px 0 0 0;
@@ -8780,7 +8759,6 @@ pre {
 .owl-carousel-posts .owl-controls {
   margin-top: 0;
 }
-
 
 @media screen and (max-width: 768px) {
   .owl-carousel .owl-controls .owl-nav {
@@ -8985,209 +8963,7 @@ a > img.fh5co-align-center {
 
 /*# sourceMappingURL=style.css.map */
 
-/* my owl-------------------------------*/
-@media screen and (max-width: 768px) {
-  .owl-carousel .owl-controls .owl-nav {
-    display: none; } }
 
-.owl-carousel .owl-controls .owl-nav .owl-next, .owl-carousel .owl-controls .owl-nav .owl-prev, .owl-carousel-posts .owl-controls .owl-nav .owl-next, .owl-carousel-posts .owl-controls .owl-nav .owl-prev {
-  top: 50%;
-  margin-top: -29px;
-  z-index: 9999;
-  position: absolute;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s; }
-
-.owl-carousel-posts .owl-controls .owl-nav .owl-next, .owl-carousel-posts .owl-controls .owl-nav .owl-prev {
-  top: 24%; }
-
-.owl-carousel .owl-controls .owl-nav .owl-next {
-  left: 0;
-  left: -70px;
-  margin-top: -60px; }
-.owl-carousel .owl-controls .owl-nav .owl-next:hover {
-  margin-top: -65px; }
-.owl-carousel .owl-controls .owl-nav .owl-next:hover i:before {
-  color: #FBB040; }
-
-.owl-carousel .owl-controls .owl-nav .owl-prev {
-  left: -70px;
-  margin-top: 0px; }
-.owl-carousel .owl-controls .owl-nav .owl-prev:hover {
-  margin-top: 5px; }
-.owl-carousel .owl-controls .owl-nav .owl-prev:hover i:before {
-  color: #FBB040; }
-
-.owl-carousel-posts .owl-controls .owl-nav .owl-next i, .owl-carousel-posts .owl-controls .owl-nav .owl-prev i, .owl-carousel-fullwidth .owl-controls .owl-nav .owl-next i, .owl-carousel-fullwidth .owl-controls .owl-nav .owl-prev i {
-  color: #444; }
-.owl-carousel-posts .owl-controls .owl-nav .owl-next:hover i, .owl-carousel-posts .owl-controls .owl-nav .owl-prev:hover i, .owl-carousel-fullwidth .owl-controls .owl-nav .owl-next:hover i, .owl-carousel-fullwidth .owl-controls .owl-nav .owl-prev:hover i {
-  color: #000; }
-
-.owl-carousel-fullwidth.fh5co-light-arrow .owl-controls .owl-nav .owl-next i, .owl-carousel-fullwidth.fh5co-light-arrow .owl-controls .owl-nav .owl-prev i {
-  color: #fff; }
-.owl-carousel-fullwidth.fh5co-light-arrow .owl-controls .owl-nav .owl-next:hover i, .owl-carousel-fullwidth.fh5co-light-arrow .owl-controls .owl-nav .owl-prev:hover i {
-  color: #fff; }
-
-@media screen and (max-width: 768px) {
-  .owl-theme .owl-controls .owl-nav {
-    display: none; } }
-
-.owl-theme .owl-controls .owl-nav [class*="owl-"] {
-  background: none !important; }
-.owl-theme .owl-controls .owl-nav [class*="owl-"] i {
-  font-size: 30px; }
-.owl-theme .owl-controls .owl-nav [class*="owl-"] i:hover, .owl-theme .owl-controls .owl-nav [class*="owl-"] i:focus {
-  background: none !important; }
-.owl-theme .owl-controls .owl-nav [class*="owl-"]:hover, .owl-theme .owl-controls .owl-nav [class*="owl-"]:focus {
-  background: none !important; }
-
-.owl-theme .owl-dots {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center; }
-
-.owl-carousel-fullwidth.owl-theme .owl-dots {
-  bottom: 0;
-  margin-bottom: 2.5em; }
-
-.owl-theme .owl-dots .owl-dot span {
-  width: 10px;
-  height: 10px;
-  background: rgba(255, 255, 255, 0.4);
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-  border: 2px solid transparent; }
-.owl-theme .owl-dots .owl-dot span:hover {
-  background: none;
-  background: white; }
-
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-  background: white;
-  border: 2px solid transparent; }
-
-.owl-carousel-fullwidth .item, .owl-carousel-fullwidth .fh5co-owl-text-wrap {
-  height: 500px;
-  display: table;
-  width: 100%; }
-.owl-carousel-fullwidth .item {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top left;
-  position: relative; }
-.owl-carousel-fullwidth .item .fh5co-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #000;
-  opacity: .3;
-  z-index: 8; }
-.owl-carousel-fullwidth .item img {
-  max-width: 100%; }
-.owl-carousel-fullwidth .item .fh5co-owl-text {
-  display: table-cell;
-  vertical-align: middle;
-  z-index: 10;
-  position: relative; }
-.owl-carousel-fullwidth .item .fh5co-owl-text a {
-  color: white;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5); }
-.owl-carousel-fullwidth .item .fh5co-owl-text a:hover {
-  text-decoration: none;
-  color: white;
-  border-bottom: 1px solid white; }
-.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead-light, .owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-sub-lead {
-  color: #fff;
-  margin: 0;
-  padding: 0;
-  font-weight: 100; }
-.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead-light {
-  font-weight: 300;
-  margin-bottom: 30px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-family: "Montserrat", arial, sans-serif; }
-.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-sub-lead-light {
-  font-size: 30px;
-  line-height: 42px;
-  font-weight: 100;
-  font-family: "Roboto", arial, sans-serif; }
-
-.js .to-animate {
-  opacity: 0; }
-
-.mfp-with-zoom .mfp-container, .mfp-with-zoom.mfp-bg {
-  opacity: 0;
-  -webkit-backface-visibility: hidden;
-  /* ideally, transition speed should match zoom duration */
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out; }
-
-.mfp-with-zoom.mfp-ready .mfp-container {
-  opacity: 1; }
-
-.mfp-with-zoom.mfp-ready.mfp-bg {
-  opacity: 0.8; }
-
-.mfp-with-zoom.mfp-removing .mfp-container, .mfp-with-zoom.mfp-removing.mfp-bg {
-  opacity: 0; }
-
-/* Image Alignment */
-img.fh5co-align-right {
-  float: right;
-  margin: 0 0 .5em 1em; }
-@media screen and (max-width: 480px) {
-  img.fh5co-align-right {
-    width: 100%;
-    margin: 0 0 .5em 0; } }
-img.fh5co-align-left {
-  float: left;
-  margin: 0 1em .5em 0; }
-@media screen and (max-width: 480px) {
-  img.fh5co-align-left {
-    width: 100%;
-    margin: 0 0 .5em 0; } }
-img.fh5co-align-center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-
-a > img.fh5co-align-right {
-  float: right;
-  margin: 0 0 .5em 1em; }
-@media screen and (max-width: 480px) {
-  a > img.fh5co-align-right {
-    width: 100%;
-    margin: 0 0 .5em 0; } }
-a > img.fh5co-align-left {
-  float: left;
-  margin: 0 1em .5em 0; }
-@media screen and (max-width: 480px) {
-  a > img.fh5co-align-left {
-    width: 100%;
-    margin: 0 0 .5em 0; } }
-a > img.fh5co-align-center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-
-
-  /*-------------------------------
-    my style for Slider text
-    -----------------------------*/
-
-    .fh5co-lead-slider{
-        color: #fff;
-        margin: 0;
-        padding: 0;
-        line-height: 1.5;
-    }
 
 .pfblock {
     padding: 120px 0 100px;
@@ -9299,7 +9075,7 @@ a > img.fh5co-align-center {
 }
 
 /*--------------------------------*/
-/***** Impact grid style *****/
+/***** Portfolio Common style *****/
 /*--------------------------------*/
 
 .grid {
@@ -9472,7 +9248,7 @@ figure.effect-bubba:hover p {
   float: right;
   position: relative;
   top: 25px;
-  right: 160px;
+  right: 150px;
   margin-right: -20px;
   z-index: 21;
   padding: 0 0 0 0;
@@ -9511,89 +9287,4 @@ figure.effect-bubba:hover p {
 }
 
 
-}
-
-
-/*--------------------
-4.6. Team
---------------------*/
-
-.team-item {
-    text-align: center;
-    background-color: #fafaf4;
-    margin-bottom: 30px;
-}
-
-.team-item h3 {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 13px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 12px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-position {
-    color: #000;
-    font-size: 12px;
-}
-
-.team-item p {
-    font-size: 13px;
-    font-weight: 300;
-    color: #9C9C9C;
-    padding: 5px 10px 20px 10px;
-}
-/*-----------------------------------------------
-  Press Grid Style
-  ---------------------------------------------*/
-
-  
-  .our-clients-section{
-    margin-bottom:2.143em;   
-    padding:2.143em 0;
-    overflow: hidden;
-    background: #ffffff;
-    box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-    -webkit-box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-    -moz-box-shadow: 0px 8px 20px rgba(85, 89, 93,0.2);
-  }
-  #our-client-thumb{
-    position: relative;
-    padding: 0 30px;
-    text-align: center;
-  }
-.customNavigation a{
-    position: absolute;
-    top: 33%;
-    font-size: 1.25rem;  
-    color: #ffffff;
-    cursor: pointer;
-    width: 1.667em;
-    text-align: center;
-    background: #55595d;
-    padding: 3px 12px;      
-}
-.customNavigation .prev {
-    float: left;
-    left: 0;
-}
-.customNavigation .next {
-    float: right;
-    right: 0;
-}
-.customNavigation a:hover{
-  background: #F9C535; 
-}
-.customNavigation i{
-  color:#ffffff;
-  vertical-align: baseline;
 }
